[package]
name = "rondafk"
version = "0.2.5"
edition = "2024"
categories = ["command-line-utilities", "development-tools", "value-formatting"]
description = "A simple ron formatter"
keywords = ["RON", "autoformatting", "beautify", "pretty-print"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Relacibo/rondafk"

[lib]

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.1.8", features = ["derive"] }
derive_more = "0.99.17"
ron-edit = "0.2.0"
thiserror = "2.0.16"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
include_dir = "0.7.3"
insta = { version = "1.28.0", features = ["ron"] }
ron = "0.11.0"
serde = { version = "1.0.154", features = ["derive"] }


[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
